--- a/src/app/transport/casco/casco.component.html
+++ b/src/app/transport/casco/casco.component.html
@@ -1,1 +1,145 @@
-<p>casco works!</p>
+<h1>АвтоКАСКО</h1>
+<div class="container">
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <div class="wrap">
+      <div class="column">
+        <mat-form-field>
+          <mat-label>Срок страхования</mat-label>
+          <mat-select formControlName="periodControl">
+            <mat-option *ngFor="let period of periods" [value]="period.value">
+              {{period.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('periodControl').hasError('required')">
+            <small>Поле "Срок страхования" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Оплата взноса единовременно или в рассрочку</mat-label>
+          <mat-select formControlName="numControl">
+            <mat-option *ngFor="let num of numberOfPayments" [value]="num.value">
+              {{num.viewValue}}
+            </mat-option>
+          </mat-select >
+          <mat-error *ngIf="form.get('numControl').hasError('required')">
+            <small>Поле "Оплата взноса единовременно или в рассрочку" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Действие договора страхования</mat-label>
+          <mat-select formControlName="locationControl">
+            <mat-option *ngFor="let loc of location" [value]="loc.value">
+              {{loc.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('locationControl').hasError('required')">
+            <small>Поле "Действие договора страхования" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Есть договор обязательного автострахования "Your Company" на год</mat-label>
+          <mat-select formControlName="otherControl">
+            <mat-option *ngFor="let other of others" [value]="other.value">
+              {{other.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('wearControl').hasError('required')">
+            <small>Поле "Есть договор обязательного автострахования "Your Company" на год" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="column">
+        <mat-form-field>
+          <mat-label>Условия страхования</mat-label>
+          <mat-select formControlName="wearControl">
+            <mat-option *ngFor="let wear of wears" [value]="wear.value">
+              {{wear.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('wearControl').hasError('required')">
+            <small>Поле "Условия страхования" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Год выпуска автомобиля</mat-label>
+          <mat-select formControlName="yearControl">
+            <mat-option *ngFor="let year of years" [value]="year.value">
+              {{year.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('yearControl').hasError('required')">
+            <small>Поле "Год выпуска автомобиля" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Валюта договора страхования</mat-label>
+          <mat-select formControlName="currencyControl">
+            <mat-option *ngFor="let currency of currency" [value]="currency.value">
+              {{currency.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('currencyControl').hasError('required')">
+            <small>Поле "Год выпуска автомобиля" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Размер страхового покрытия (страховая сумма)</mat-label>
+          <input matInput value="text" formControlName="amountControl">
+          <mat-error *ngIf="form.get('amountControl').hasError('required')">
+            <small>Поле "Размер страхового покрытия (страховая сумма)" не может быть пустым</small>
+          </mat-error>
+          <mat-error *ngIf="form.get('amountControl').hasError('pattern')">
+            <small>Поле "Размер страхового покрытия (страховая сумма)" должно содержать только цифры</small>
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="btn">
+      <button mat-raised-button color="primary" type="submit"
+              [disabled]="form.invalid">
+        Рассчитать</button>
+    </div>
+  </form>
+
+  <small *ngIf="form.invalid">Необходимо заполнить все поля, чтобы произвести расчет</small>
+
+  <div *ngIf="cost">
+    <div *ngIf="cost !== cost / numberCoefficient;else elseBlock">
+      <p>
+        Платеж при заключении договора {{cost / numberCoefficient | currency: currencyValue : 'symbol':'1.0-2'}}
+      </p>
+      <p *ngIf="cost !== cost * currencyCoefficient">
+        ({{cost * currencyCoefficient / numberCoefficient | currency: 'BYN':
+        'symbol':'1.0-2'}} на {{today | date }})
+      </p>
+
+      <p>
+        Всего по договору страхования {{cost  | currency: currencyValue : 'symbol':'1.0-2'}}
+      </p>
+      <p *ngIf="cost !== cost * currencyCoefficient">
+        ({{cost * currencyCoefficient | currency: 'BYN' :
+        'symbol':'1.0-2'}} на {{today | date }})
+      </p>
+    </div>
+    <ng-template #elseBlock>
+      <p>
+        Всего по договору страхования {{cost | currency: currencyValue : 'symbol':'1.0-2'}}
+      </p>
+      <p *ngIf="cost !== cost * currencyCoefficient">
+        ({{cost * currencyCoefficient | currency: 'BYN' :
+        'symbol':'1.0-2'}} на {{today | date }})
+      </p>
+    </ng-template>
+  </div>
+</div>
+
+
+
