feat: add background.directive

--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,4 +1,6 @@
 <h1>Error 404</h1>
+<div class="btn">
+  <button appBackground mat-raised-button (click)="goHome()">На главную</button>
+</div>
 
-<button mat-raised-button (click)="goHome()">На главную</button>
 
