--- a/src/app/property/apartment/apartment.component.html
+++ b/src/app/property/apartment/apartment.component.html
@@ -104,7 +104,7 @@
      </div>
 
     <div class="btn">
-      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
+      <button appBackground mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
     </div>
   </form>
 
