--- a/src/app/health/abroad/abroad.component.html
+++ b/src/app/health/abroad/abroad.component.html
@@ -54,14 +54,15 @@
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Вы ранее заключали договор с ЗАСО «Промтрансинвест» по данному виду страхования?</mat-label>
+          <mat-label>Вы ранее заключали договор с "Your Company" по данному виду страхования?</mat-label>
           <mat-select formControlName="repeatControl">
             <mat-option *ngFor="let repeat of repeats" [value]="repeat.value">
               {{repeat.viewValue}}
             </mat-option>
           </mat-select>
           <mat-error *ngIf="form.get('repeatControl').hasError('required')">
-            <small>Поле "Вы ранее заключали договор с ЗАСО «Промтрансинвест» по данному виду страхования?" не может быть пустым</small>
+            <small>Поле "Вы ранее заключали договор с "Your Company" по данному виду страхования?" не может быть
+              пустым</small>
           </mat-error>
         </mat-form-field>
       </div>
@@ -118,7 +119,8 @@
     </div>
 
     <div class="btn">
-      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
+      <button appBackground mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать
+      </button>
     </div>
   </form>
 
