--- a/src/app/health/accident/accident.component.html
+++ b/src/app/health/accident/accident.component.html
@@ -116,7 +116,8 @@
     </div>
 
     <div class="btn">
-      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
+      <button appBackground mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать
+      </button>
     </div>
   </form>
 
