--- a/src/app/property/building/building.component.html
+++ b/src/app/property/building/building.component.html
@@ -130,7 +130,7 @@
     </div>
 
     <div class="btn">
-      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
+      <button appBackground mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
     </div>
   </form>
 
