--- a/src/app/property/responsibility/responsibility.component.html
+++ b/src/app/property/responsibility/responsibility.component.html
@@ -1,4 +1,4 @@
-<h1>Страхование строений</h1>
+<h1>Страхование ответственности перед соседями</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="wrap">
@@ -106,7 +106,7 @@
     </div>
 
     <div class="btn">
-      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
+      <button appBackground mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
     </div>
   </form>
 
