--- a/src/app/transport/casco/casco.component.html
+++ b/src/app/transport/casco/casco.component.html
@@ -85,7 +85,7 @@
             </mat-option>
           </mat-select>
           <mat-error *ngIf="form.get('currencyControl').hasError('required')">
-            <small>Поле "Год выпуска автомобиля" не может быть пустым</small>
+            <small>Поле "Валюта договора страхования" не может быть пустым</small>
           </mat-error>
         </mat-form-field>
 
@@ -103,7 +103,7 @@
     </div>
 
     <div class="btn">
-      <button mat-raised-button color="primary" type="submit"
+      <button appBackground mat-raised-button color="primary" type="submit"
               [disabled]="form.invalid">
         Рассчитать</button>
     </div>
