--- a/src/app/transport/green-card/green-card.component.html
+++ b/src/app/transport/green-card/green-card.component.html
@@ -62,7 +62,7 @@
     </mat-form-field>
 
     <div class="btn">
-      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
+      <button appBackground mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
     </div>
   </form>
 
