--- a/src/app/transport/osgo/osgo.component.html
+++ b/src/app/transport/osgo/osgo.component.html
@@ -195,7 +195,7 @@
     </div>
 
     <div class="btn">
-      <button mat-raised-button color="primary" type="submit"
+      <button appBackground mat-raised-button color="primary" type="submit"
               [disabled]="form.invalid">
         Рассчитать</button>
     </div>
