feat: add page-name.pipe

--- a/src/app/health/abroad/abroad.component.html
+++ b/src/app/health/abroad/abroad.component.html
@@ -1,4 +1,4 @@
-<h1>Страхование болезней и несчастных случаев при выезде за границу</h1>
+<h1>{{'Страхование болезней и несчастных случаев при выезде за границу' | pageName}}</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="wrap">
