--- a/src/app/health/family-insurance/family-insurance.component.html
+++ b/src/app/health/family-insurance/family-insurance.component.html
@@ -1,4 +1,4 @@
-<h1>Страхование семьи</h1>
+<h1>{{'Страхование семьи' | pageName}}</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="wrap">
