--- a/src/app/transport/green-card/green-card.component.html
+++ b/src/app/transport/green-card/green-card.component.html
@@ -1,4 +1,4 @@
-<h1>Зеленая карта</h1>
+<h1>{{'Зеленая карта' | pageName}}</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <mat-form-field>
