--- a/src/app/health/accident/accident.component.html
+++ b/src/app/health/accident/accident.component.html
@@ -1,4 +1,4 @@
-<h1>Страхование от несчастных случаев</h1>
+<h1>{{'Страхование от несчастных случаев' | pageName}}</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="wrap">
