--- a/src/app/property/apartment/apartment.component.html
+++ b/src/app/property/apartment/apartment.component.html
@@ -1,4 +1,4 @@
-<h1>Жилищное страхование (квартира, имущество, ответственность)</h1>
+<h1>{{'Жилищное страхование (квартира, имущество, ответственность)' | pageName}}</h1>
 <div class="container">
    <form [formGroup]="form" (ngSubmit)="submit()">
      <div class="wrap">
