--- a/src/app/property/building/building.component.html
+++ b/src/app/property/building/building.component.html
@@ -1,4 +1,4 @@
-<h1>Страхование строений</h1>
+<h1>{{'Страхование строений' | pageName}}</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="wrap">
