--- a/src/app/property/responsibility/responsibility.component.html
+++ b/src/app/property/responsibility/responsibility.component.html
@@ -1,4 +1,4 @@
-<h1>Страхование ответственности перед соседями</h1>
+<h1>{{'Страхование ответственности перед соседями' | pageName}}</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="wrap">
