--- a/src/app/transport/casco/casco.component.html
+++ b/src/app/transport/casco/casco.component.html
@@ -1,4 +1,4 @@
-<h1>АвтоКАСКО</h1>
+<h1>{{'АвтоКАСКО' | pageName}}</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="wrap">
