--- a/src/app/transport/osgo/osgo.component.html
+++ b/src/app/transport/osgo/osgo.component.html
@@ -1,4 +1,4 @@
-<h1>Обязательное страхование гражданской ответственности владельцев ТС</h1>
+<h1>{{'Обязательное страхование гражданской ответственности владельцев ТС' | pageName}}</h1>
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="wrap">
