fix: fix mistake

--- a/src/app/health/family-insurance/family-insurance.component.html
+++ b/src/app/health/family-insurance/family-insurance.component.html
@@ -47,7 +47,7 @@
             </mat-option>
           </mat-select>
           <mat-error *ngIf="form.get('numberControl').hasError('required')">
-            <small>Поле "Участие в спортивных соревнованиях или активный отдых" не может быть пустым</small>
+            <small>Поле "Количество застрахованных лиц" не может быть пустым</small>
           </mat-error>
         </mat-form-field>
 
